# USTC-2024-AI-Fundamentals

./: .gitignore  README.md
AStarAlgo/: Map.py  Point.py  visualize.py
Astar-Visual-Implement/: AStar.py  main.py
Lab1/Alpha_Beta/: CMakeLists.txt
Lab1/Alpha_Beta/input/: 0.txt  9.txt
Lab1/Alpha_Beta/output/: 1.txt  10.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt  output_1.txt  output_10.txt  output_2.txt  output_3.txt  output_5.txt  output_6.txt  output_7.txt
Lab1/Alpha_Beta/src/: AlphaBeta.cpp  AlphaBeta.h  Chess.cpp  Chess.h  ChessBoard.cpp  ChessBoard.h  Evaluate.cpp  Evaluate.h  GameTree.cpp  GameTree.h  main.cpp  node.h  test.cpp
Lab1/Astar/: CMakeLists.txt
Lab1/Astar/input/: input_2.txt  input_3.txt  input_4.txt  input_5.txt  input_6.txt
Lab1/Astar/output/: output_4.txt
Lab1/Astar/src/: Astar.cpp  Astar.h  Map.cpp  Map.h  Point.h  main.cpp
Lab1/report/: report.md
Lab2/bonus/: lm_attack.ipynb
Lab2/part1/: DecisionTree.py  PCAKMeans.py
Lab2/part2/: .gitignore  README.md  TransformerDecoderLayer.py  args.py  datautils.py  main.py  model.py  moe.ipynb  train.py
Lab2/part2/results/: test_loss.txt  train_loss.txt
Lab2/report/: report.md
